--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo_app",
   "version": "0.1.0",
+  "homepage": "https://caistrong.github.io/react-todo/",
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.1",
@@ -14,6 +15,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "redux-immutable-state-invariant": "^2.1.0",
+    "gh-pages": "^1.1.0"
   }
 }
